@@ -75,7 +75,7 @@ each logical value is given two properties, named value and units. The
 following fields are available in a property:
 
 * type - Required. The data type of the value. Supported types are Bool,
-Int8 - Int64, Uint8 - Uint64, Float32, Float64 and String. Note that the
+Int8 - Int64, Uint8 - Uint64, Float32, Float64, Binary and String. Note that the
 undifferentiated Integer and Float types are deprecated in EdgeX and not
 supported by the SDK.
 * readWrite - "R", "RW", or "W" indicating whether the value is readable or
